# project_muserium

./: .gitignore  .pylintrc  README.md  package-lock.json  pyproject.toml  pytest.ini
.github/workflows/: class_CI.yml  common_app_CI.yml  main_page_CI.yml  shop_CI.yml  sonarcloud.yml  user_CI.yml
accounts/: managers.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_user_username.py  0003_alter_user_phone_number.py  0004_user_name.py  0005_rename_phone_number_user_mobile.py  0006_user_address_detail_user_address_extra_user_postcode.py  0007_remove_user_nickname.py
accounts/tests/: test_accounts.py
common/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
common/forms/: __init__.py  comment_forms.py  detail_info_forms.py  qna_forms.py  review_forms.py
common/migrations/: 0001_initial.py  0002_detailinfo_product_like_product_question_product_and_more.py  0002_remove_qna_glass_class_remove_review_glass_class_and_more.py  0003_alter_image_title_comment_qna_review.py  0003_rename_content_rating_review_sub_rating_1_and_more.py  0004_remove_question_answerd_at_question_answered_at.py  0004_remove_review_title.py  0005_alter_comment_content_alter_qna_content_and_more.py  0005_remove_detailinfo_image_remove_detailinfo_image_alt.py  0006_detailinfo_description_1_detailinfo_description_2_and_more.py  0006_review_content_rating_review_readiness_rating_and_more.py  0007_alter_qna_title.py  0007_rename_image_url_1_detailinfo_product_image_and_more.py  0008_alter_detailinfo_title.py  0008_qna_view_count.py  0009_qna_answerd_at.py  0010_rename_qna_question_answer.py  0013_delete_image.py  (+4 more)
config/: asgi.py  context_processors.py  settings.py  urls.py
glass_class/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
main_page/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
shop/: models.py  serializers.py  urls.py
templates/: base.html  footer.html  navbar.html
(+51 files in other folders)
