[tool.poetry]
name = "project-muserium"
version = "0.1.0"
description = ""
authors = ["SigningOwl <whddms1208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.7"
jinja2 = "^3.1.4"
uvicorn = "^0.30.3"
daphne = "^4.1.2"
channels = "^4.1.0"
django-environ = "^0.11.2"
pillow = "^10.4.0"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
